[project]
name = "oepn"
version = "0.1.0"
description = "Unified AI Agent Framework — combining the best patterns from CrewAI, AutoGPT, LangGraph, PydanticAI, and Agno"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typing_extensions>=4.9",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
google = ["google-generativeai>=0.8"]
all = ["oepn[openai,anthropic,google]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oepn"]

[tool.ruff]
line-length = 100
target-version = "py311"
